--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ phone📞: 01200233912
     <div class="info-container">
         <div class="info-box">
             <h3>Rate </h3>
-            <p>120+</p>
+            <p>حب الناس </p>
         </div>
         <div class="info-box">
-            <h3>meeting</h3>
-            <p>98%</p>
+            <h3>Evaluation</h3>
+            <p>انا البابا 🫡</p>
         </div>
     </div>
 </div>
